--- a/css/my_resume.css
+++ b/css/my_resume.css
@@ -4,18 +4,11 @@
   outline: 1px solid red;
 } */
 
-.test {
-  color: orangered;
-}
-
 .container {
   /* max-width: 960px; */
   max-width: 1080px;
   height: 100%;
   margin: 2rem auto;
-
-  /* font-family: Montserrat; */
-  font-family: Arial, Helvetica, sans-serif;
 
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -52,17 +45,9 @@
 .rounded-all {
   border-radius: 1rem;
 }
-/* 
-.rounded-left {
-  border-radius: 1rem 0 0 1rem;
-}
-
-.rounded-right {
-  border-radius: 0 1rem 1rem 0;
-} */
 
 .transition {
-  transition: 0.5s;
+  transition: 0.8s;
 }
 
 .banner {
@@ -275,10 +260,72 @@ a:hover {
   border: 0;
   padding: 0;
   background: transparent;
+  cursor: pointer;
 }
 
 .lang-icon:hover {
   color: red;
+}
+
+.locale-menu {
+  position: fixed;
+  top: 5px;
+  right: -100px;
+  /* right: 0px; */
+  display: flex;
+  flex-direction: column;
+  /* justify-content: flex-end; */
+}
+
+.locale-menu:hover {
+  right: 5px;
+}
+
+.locale-item {
+  width: 80px;
+  height: 2rem;
+
+  color: #2e3d48;
+  background: #ccc;
+  line-height: 2rem;
+  text-align: center;
+
+  padding: 0 1rem 0 1rem;
+  margin: 3px;
+  border-radius: 5px;
+
+  cursor: pointer;
+
+  align-self: flex-end;
+}
+
+.locale-icon {
+  width: 130px;
+  height: rem;
+
+  color: #2e3d48;
+  background: #ccc;
+  line-height: 2rem;
+  text-align: left;
+
+  padding: 0 1rem 0 1rem;
+  margin: 3px;
+  border-radius: 5px;
+
+  cursor: pointer;
+}
+
+.fa-language {
+  vertical-align: middle;
+}
+
+.locale-item:hover,
+.locale-icon:hover {
+  background: rgb(146, 146, 146);
+}
+
+.lang-icon:hover .locale-item {
+  background: yellow;
 }
 
 .year {
@@ -298,7 +345,7 @@ a:hover {
   margin: 0.5rem;
 }
 
-.cert-list{
+.cert-list {
   width: 150px;
   margin: 0.5rem;
 }
@@ -316,7 +363,7 @@ a:hover {
   margin: 0.5rem;
 }
 
-.devicon{
+.devicon {
   font-size: 3rem;
 }
 
