--- a/css/resume.css
+++ b/css/resume.css
@@ -5,7 +5,6 @@
 } */
 
 .container {
-  /* max-width: 960px; */
   max-width: 1080px;
   height: 100%;
   margin: 2rem auto;
@@ -14,13 +13,13 @@
   grid-template-columns: repeat(3, 1fr);
   grid-auto-rows: auto;
   grid-template-areas:
-    "banner banner banner"
-    "content-1 content-1 title-1"
-    "title-2 content-2 content-2"
-    "content-3 content-3 title-3"
-    "title-4 content-4 content-4"
-    "content-5 content-5 title-5"
-    "footer footer footer";
+    'banner banner banner'
+    'content-1 content-1 title-1'
+    'title-2 content-2 content-2'
+    'content-3 content-3 title-3'
+    'title-4 content-4 content-4'
+    'content-5 content-5 title-5'
+    'footer footer footer';
   gap: 1rem;
 }
 
@@ -29,17 +28,13 @@
   /* background: rgb(182, 248, 207); */
   background: rgb(141, 61, 61);
   color: white;
-  /* font-size: 1rem;
-  font-family: "Segoe UI", Tahoma, "Geneva", Verdana, sans-serif; */
 }
 
 .title {
-  /* background: #eee; */
   background: rgb(250, 246, 184);
   font-size: 1.5rem;
   font-weight: bold;
   border: 5px solid rgb(141, 61, 61);
-  /* font-family: "Montserrat"; */
 }
 
 .rounded-all {
@@ -51,7 +46,6 @@
 }
 
 .banner {
-  /* background: rgb(138, 138, 138); */
   background: rgb(50, 51, 53);
   grid-area: banner;
   height: 300px;
@@ -128,17 +122,12 @@
 
 .name-plate {
   font-size: 1.8rem;
-  /* font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif; */
-  /* line-height: 340px; */
   align-self: center;
   margin-left: 3rem;
 }
 
 .contact {
-  /* background: pink; */
-  /* grid-area: contact; */
   color: #fff;
-  /* font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif; */
   font-size: 1rem;
   line-height: 1.5rem;
 
@@ -148,7 +137,6 @@
 }
 
 a {
-  /* color: #000; */
   color: #fff;
 }
 
@@ -219,17 +207,11 @@ a:hover {
   padding: 2rem;
 }
 
-/* .content-5-2nd {
-  grid-area: content-5-2nd;
-  padding: 2rem;
-} */
-
 .footer {
-  background: #ccc;
+  background: rgb(50, 51, 53);
+  color: #fff;
   grid-area: footer;
   text-align: center;
-
-  /* font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif; */
   line-height: 3rem;
 }
 
@@ -271,10 +253,9 @@ a:hover {
   position: fixed;
   top: 5px;
   right: -100px;
-  /* right: 0px; */
   display: flex;
   flex-direction: column;
-  /* justify-content: flex-end; */
+  font-family: 'Noto Sans TC', sans-serif;
 }
 
 .locale-menu:hover {
@@ -369,7 +350,6 @@ a:hover {
 
 .skill-icon {
   margin: 1rem;
-  /* padding: 1rem; */
 }
 
 .skill-name {
