Start doing my projects gallery

--- a/css/resume.css
+++ b/css/resume.css
@@ -168,7 +168,8 @@ b {
 }
 
 .banner-title {
-  color: #fff;
+  /* color: #fff; */
+  color: #fffeee;
 }
 
 .name-plate {
@@ -468,6 +469,7 @@ a:hover {
   bottom: 0px;
   /* left: 0px; */
 }
+
 .scroll {
   position: absolute;
   left: 10px;
@@ -481,8 +483,100 @@ a:hover {
   cursor: pointer;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
+
 .scroll:hover {
   /* background: rgba(178, 178, 178, 1); */
   color: #fff;
   background: #2c3e50;
+}
+
+/* My projects grid */
+.project-container {
+  width: 100%;
+  height: 100%;
+  /* background: #ccc; */
+  /* border: 1px solid red; */
+
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-auto-rows: auto;
+  gap: 1rem;
+}
+
+.project-item {
+  width: 100%;
+  height: 177px;
+  background: gray;
+  position: relative;
+  overflow: hidden;
+  object-fit: cover;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+}
+
+.project-item img {
+  /* height: 100%; */
+  width: 100%;
+}
+
+.project-item .content-overlay {
+  background: rgba(0, 0, 0, 0.7);
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  opacity: 0;
+  -webkit-transition: all 0.4s ease-in-out 0s;
+  -moz-transition: all 0.4s ease-in-out 0s;
+  transition: all 0.4s ease-in-out 0s;
+}
+
+.project-item:hover .content-overlay {
+  opacity: 1;
+}
+
+.content-image {
+  width: 100%;
+}
+
+.content-details {
+  position: absolute;
+  text-align: center;
+  padding-left: 1em;
+  padding-right: 1em;
+  width: 100%;
+  top: 50%;
+  left: 50%;
+  opacity: 0;
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  -webkit-transition: all 0.3s ease-in-out 0s;
+  -moz-transition: all 0.3s ease-in-out 0s;
+  transition: all 0.3s ease-in-out 0s;
+}
+
+.project-item:hover .content-details {
+  top: 50%;
+  left: 50%;
+  opacity: 1;
+}
+
+.content-details h3 {
+  color: #fff;
+  font-weight: 500;
+  letter-spacing: 0.15em;
+  margin-bottom: 0.5em;
+  text-transform: uppercase;
+}
+
+.content-details p {
+  color: #fff;
+  font-size: 0.8em;
+}
+
+.fadeIn-bottom {
+  top: 80%;
 }
