Fixed blinking cursor color & added footer shadow

--- a/css/resume.css
+++ b/css/resume.css
@@ -121,7 +121,7 @@ b {
   }
   50% {
     /* color: black; */
-    color: white;
+    color: #fffeee;
   }
 }
 
@@ -132,7 +132,7 @@ b {
   }
   50% {
     /* color: black; */
-    color: white;
+    color: #fffeee;
   }
 }
 
@@ -143,7 +143,7 @@ b {
   }
   50% {
     /* color: black; */
-    color: white;
+    color: #fffeee;
   }
 }
 
@@ -153,7 +153,7 @@ b {
     color: transparent;
   }
   50% {
-    color: black;
+    color: #fffeee;
   }
 }
 
@@ -163,7 +163,7 @@ b {
     color: transparent;
   }
   50% {
-    color: black;
+    color: #fffeee;
   }
 }
 
@@ -273,28 +273,16 @@ a:hover {
     #4ca1af,
     #2c3e50
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
   color: #fffeee;
   grid-area: footer;
   text-align: center;
   line-height: 3rem;
 }
 
-#btn1 {
-  position: fixed;
-  top: 2rem;
-  left: 2rem;
-}
-
-#btn2 {
-  position: fixed;
-  top: 4rem;
-  left: 2rem;
-}
-
-#btn3 {
-  position: fixed;
-  top: 6rem;
-  left: 2rem;
+.footer:hover {
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
 .lang-icon {
