--- a/css/resume.css
+++ b/css/resume.css
@@ -19,6 +19,8 @@ body {
     'content-5 content-5 title-5'
     'footer footer footer';
   gap: 1.5rem;
+  position: relative;
+  z-index: 1;
 }
 
 .content {
@@ -72,19 +74,10 @@ b {
 }
 
 .banner {
-  /* background: rgb(50, 51, 53); */
   /* From uiGradients: Deep Sea Space */
   background: #2c3e50; /* fallback for old browsers */
-  background: -webkit-linear-gradient(
-    to right,
-    #4ca1af,
-    #2c3e50
-  ); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(
-    to right,
-    #4ca1af,
-    #2c3e50
-  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: -webkit-linear-gradient(to right, #4ca1af, #2c3e50);
+  background: linear-gradient(to right, #4ca1af, #2c3e50);
 
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
@@ -95,7 +88,6 @@ b {
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
   grid-template-areas:
-    /* 'name name .' */
     '. . .'
     'name name .'
     '. . contact';
@@ -178,20 +170,13 @@ b {
 .name-plate {
   font-size: 1.8rem;
   align-self: center;
-  /* background: green; */
-  /* margin-left: 3rem; */
   grid-area: name;
 }
 
 .contact {
   color: #fffeee;
-  /* background: orange; */
   font-size: 1rem;
   line-height: 1.5rem;
-
-  /* padding-right: 1rem; */
-  /* margin-left: auto; */
-  /* align-self: flex-end; */
   grid-area: contact;
 }
 
@@ -271,19 +256,10 @@ a:hover {
 }
 
 .footer {
-  /* background: rgb(50, 51, 53); */
   /* From uiGradients: Deep Sea Space */
   background: #2c3e50; /* fallback for old browsers */
-  background: -webkit-linear-gradient(
-    to left,
-    #4ca1af,
-    #2c3e50
-  ); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(
-    to left,
-    #4ca1af,
-    #2c3e50
-  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: -webkit-linear-gradient(to left, #4ca1af, #2c3e50);
+  background: linear-gradient(to left, #4ca1af, #2c3e50);
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
   color: #fffeee;
@@ -317,6 +293,7 @@ a:hover {
   font-family: 'Noto Sans TC', sans-serif;
   display: flex;
   flex-direction: column;
+  z-index: 10;
 }
 
 .locale-menu:hover {
@@ -333,7 +310,7 @@ a:hover {
 }
 
 .locale-item {
-  width: 80px;
+  width: 5rem;
   height: 2rem;
 
   color: #2c3e50;
@@ -351,7 +328,7 @@ a:hover {
 }
 
 .locale-icon {
-  width: 130px;
+  width: 8.125rem;
   height: 2.3rem;
 
   color: #2c3e50;
@@ -365,8 +342,61 @@ a:hover {
 
   cursor: pointer;
   vertical-align: middle;
-  align-self: flex-end;
   z-index: 2;
+}
+
+.locale-menu-mobile {
+  position: fixed;
+  top: 0.3rem;
+  left: 0rem;
+  font-family: 'Noto Sans TC', sans-serif;
+  display: flex;
+  flex-direction: column;
+  z-index: 10;
+  display: none;
+}
+
+.locale-icon-mobile {
+  width: 3rem;
+  height: 3rem;
+
+  color: #2c3e50;
+  background: #4ca1af;
+  line-height: 3rem;
+  text-align: center;
+
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  cursor: pointer;
+}
+
+.locale-items-mobile {
+  background: #2c3e50;
+  align-self: flex-start;
+  display: none;
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+}
+.locale-item-mobile {
+  width: 5rem;
+  height: 2rem;
+
+  color: #fffff6;
+  line-height: 2rem;
+  text-align: center;
+  cursor: pointer;
+}
+
+.show {
+  display: block;
+}
+
+.hide {
+  display: none;
+}
+
+.active {
+  background: #2c3e50;
+  color: #fffeee;
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
 .fa-language {
@@ -389,13 +419,13 @@ a:hover {
 
 .lang-list,
 .lang-level {
-  width: 100px;
+  width: 6.25rem;
   margin: 0.5rem;
 }
 
 .cert-title,
 .cert-grade {
-  width: 150px;
+  width: 9.375rem;
   margin: 0.5rem;
 }
 
@@ -453,7 +483,7 @@ a:hover {
 .header {
   position: fixed;
   top: 0;
-  z-index: 2;
+  z-index: 5;
   width: 100%;
   /* background-color: #f1f1f1; */
   opacity: 0.8;
@@ -501,7 +531,7 @@ a:hover {
 
 .scroll:hover {
   /* background: rgba(178, 178, 178, 1); */
-  color: #fff;
+  color: #fffeee;
   background: #2c3e50;
 }
 
@@ -514,6 +544,7 @@ a:hover {
   grid-template-columns: 1fr 1fr;
   grid-auto-rows: auto;
   gap: 3rem;
+  z-index: 2;
 }
 
 .project-card {
@@ -529,8 +560,8 @@ a:hover {
   padding: 1.5rem;
   background: #fffff6;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24),
-    /* inset 0px 0px 50px rgba(0, 0, 20, 0.2); */
-    inset 0px 0px 50px rgba(119, 80, 29,0.3);
+    /* inset 0px 0px 50px rgba(0, 0, 20, 0.2); */ inset 0px 0px 50px
+      rgba(119, 80, 29, 0.3);
   transition: 0.5s;
   position: relative;
 }
@@ -568,7 +599,7 @@ a:hover {
   background-image: url('../img/the-wheel.png');
 }
 .card-img-3 {
-  background-image: url('https://images.unsplash.com/photo-1496080174650-637e3f22fa03?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1606&q=80');
+  background-image: url('https://images.unsplash.com/photo-1414016642750-7fdd78dc33d9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1498&q=80');
 }
 
 .card-img-4 {
