--- a/css/resume.css
+++ b/css/resume.css
@@ -619,6 +619,10 @@ a:hover {
   background-image: url('https://images.unsplash.com/photo-1500520198921-6d4704f98092?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1525&q=80');
 }
 
+.card-img-5 {
+  background-image: url('https://images.unsplash.com/reserve/oIpwxeeSPy1cnwYpqJ1w_Dufer%20Collateral%20test.jpg?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1516&q=80');
+}
+
 .card-title {
   font-weight: 400;
   font-size: 1.3rem;
